# LightRFT

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  README_zh.md  genindex.html  index.html  index_zh.html  objects.inv  py-modindex.html  pyproject.toml  quick_view.sh  requirements-dev.txt  requirements-doc.txt  requirements.txt  searchindex.js  setup.py  view_trajectories.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: doc.yml  publish-to-pypi.yml  style.yml
_modules/: index.html
_sources/: index_zh.rst.txt
_sources/best_practice/: fast_exp_maker_en.md.txt  troubleshooting.md.txt  troubleshooting_zh.md.txt
_sources/installation/: index_zh.rst.txt
_sources/quick_start/: project.rst.txt  project_zh.rst.txt
api_doc/datasets/: grm_dataset.html  hpdv3.html  image_reward_db.html  imagegen_cot_reward.html  omnirewardbench.html  rapidata.html  utils.html
api_doc/models/: actor_al.html  actor_language.html  actor_vl.html  grm_vl.html  index.html  loss.html  srm_al.html  srm_vl.html  utils.html
api_doc/strategy/: config.html  index.html
api_doc/trainer/: experience_maker.html  experience_maker_vl.html  fast_exp_maker.html  grm_trainer_vl.html  index.html  kl_controller.html  ppo_trainer.html  ppo_trainer_vl.html  replay_buffer.html  replay_buffer_utils.html  replay_buffer_vl.html  spmd_ppo_trainer.html  srm_trainer_al.html  srm_trainer_vl.html  utils.html
api_doc/utils/: index.html  logging_utils.html  processor.html  trajectory_saver.html  utils.html
best_practice/: contributing.html  contributing_zh.html  faq.html  faq_zh.html  fast_exp_maker_en.html  fast_exp_maker_zh.html  index_zh.html  model.html  model_testing.html  model_testing_zh.html  model_zh.html  strategy_design_philosophy.html  strategy_design_philosophy_zh.html  troubleshooting.html  troubleshooting_zh.html
docs/: Makefile
docs/source/: conf.py  index.rst
examples/chat/: test_chat.py
examples/godsmeme/: meme_dataset.py  reward_model.py  test_meme_dataset.py  train_colocate.py
examples/grm_rft/: bench_grm_vl.py  reward_models_utils.py  run_grm_rft_grpo_colocate_H.sh  train_colocate.py
examples/grm_training/: run_grm_vl.sh  train_grm_vl.py
examples/grm_vl_rl/: bench_grm_vl.py  run_grm_vl_rl.sh  train_colocate.py
examples/gsm8k_geo3k/: apply_npu_patches.py  example.py  reward_models_utils.py  run_grpo_geo3k_lora_qwen2.5_vl_7b.sh  run_grpo_geo3k_qwen2.5_vl_7b.sh  run_grpo_gsm8k_qwen2.5_0.5b.sh  run_grpo_gsm8k_qwen2.5_0.5b_2.sh  run_grpo_gsm8k_qwen2.5_0.5b_npu.sh  run_ppo_geo3k_qwen2.5_vl_7b.sh  test_geo3k_lora.py  (+1 more)
installation/: index.html  index_zh.html
quick_start/: project.html  project_zh.html
tools/: docker_volumes.py  show_version.py
(+199 files in other folders)
