[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LightRFT"
version = "0.1.1"
description = "Light, Efficient, Omni-modal & Reward-model Driven Reinforcement Fine-Tuning Framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "LightRFT Team", email = "opendilab@pjlab.org.cn"}
]
keywords = [
    "reinforcement learning",
    "RLVR",
    "RLHF",
    "large language models",
    "vision-language models",
    "reward models",
    "omni-modal",
    "multi-modal",
    "PPO",
    "GRPO",
    "deep learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "sglang>=0.5.6.post2",
    "deepspeed>=0.18.3",
    "accelerate",
    "datasets",
    "wandb",
    "peft",
    "easydict",
    "decord",
    "orjson",
    "bitsandbytes",
    "einops",
    "loralib",
    "tensorboard",
    "tqdm",
    "nltk",
    "mathruler",
    "loguru",
    "librosa",
    "qwen-vl-utils",
    "sympy",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pylint",
    "yapf==0.29.0",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autobuild",
]
eval = [
    "latex2sympy2",
    "timeout_decorator",
    "word2number",
]
# Optional vLLM backend support
# Install with: pip install "LightRFT[vllm]"
vllm = [
    "vllm>=0.13.3",
]
# Optional flash-attention support for improved performance
# Install with: pip install "LightRFT[flash-attn]"
# Note: flash-attn requires specific CUDA versions and may have installation challenges.
# See installation documentation for alternatives (prebuilt wheels or Docker images).
flash-attn = [
    "flash-attn>=2.8.3",
]

[project.urls]
Homepage = "https://github.com/opendilab/LightRFT"
Documentation = "https://github.com/opendilab/LightRFT/tree/main/docs"
Repository = "https://github.com/opendilab/LightRFT"
"Bug Reports" = "https://github.com/opendilab/LightRFT/issues"

[tool.setuptools]
packages = ["lightrft"]

[tool.setuptools.package-data]
lightrft = ["py.typed"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311']

[tool.pylint.messages_control]
max-line-length = 120
